<resources>
    <string name="app_name" translatable="false">Hr Resturant</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="close">close</string>
    <string name="open">open</string>
    <string name="get_location">"location "</string>
    <string name="location_permission_request">enable this request</string>
    <string name="login">Login</string>
    <string name="sign_up">Sign Up</string>
    <string name="search">Search</string>
    <string name="ice_cream_description">Ice Cream Description</string>
    <string name="ice_cream">Ice Cream</string>
    <string name="time">Time :</string>
    <string name="price">Price :</string>
    <string name="_12_m">12 M</string>
    <string name="_12">12 $</string>
    <string name="_1">1</string>
    <string name="retry">Retry</string>
    <string name="error">Error</string>
    <string name="about_dev">about dev</string>
    <string name="open_9_am">Open : 9 AM</string>
    <string name="close_12_pm">Close : 12 PM</string>
    <string name="location_benha">Location : benha</string>
    <string name="make_order">Make Order</string>
    <string name="breakfast">Breakfast</string>
    <string name="lunch">Lunch</string>
    <string name="dessert">Dessert</string>
    <string name="drinks">Drinks</string>
    <string name="most_popular">Most Popular</string>
    <string name="offers">Offers</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="send_password_reset_to_email_above">Send Password Reset To Email Above</string>
    <string name="_login">Login</string>
    <string name="continue_as_a_guest">Continue As a Guest</string>
    <string name="served_with_your_vhoice_of_two_basmati_rice_sauteed_vegetables_puree_potatoes_french_fries_wedgrs_gratin_potatoes_n_n_or_one_type_of_pasta_benna_spaghetti_fettuccine_n_n_or_green_salad">Served with your vhoice of two Basmati rice, sauteed vegetables,Puree Potatoes, French fries, Wedgrs, Gratin Potatoes.\n \n Or one type of Pasta (Benna - Spaghetti , Fettuccine) \n \n Or Green Salad</string>
    <string name="name">Name</string>
    <string name="location_city_state_country">Location (city - state - country)</string>
    <string name="primary_phone_number">Primary Phone Number</string>
    <string name="secondary_phone_number">Secondary Phone Number</string>
    <string name="order_now">Order Now</string>
    <string name="email_address">Email Address</string>
    <string name="egg_and_toast">Egg and Toast</string>
    <string name="egg_and_toast_ddfdfggfgdfnsd">Egg and Toast ddfdfggfgdfnsd</string>
    <string name="_time">Time :</string>
    <string name="title">Title</string>
    <string name="description">Description</string>
    <string name="_2_pizza_3_soups_1_salade_4_ice_cream">2 Pizza - 3 Soups - 1 Salade - 4 Ice Cream</string>
    <string name="total_price">Total Price :</string>
    <string name="_170_p">170 P</string>
    <string name="total_estimated_time">Total Estimated Time :</string>
    <string name="_40_min">40 Min</string>
    <string name="order_status">Order Status :</string>
    <string name="deliverd_to_restaurant">Deliverd To Restaurant</string>
    <string name="order_date_and_time">Order Date And Time :</string>
    <string name="cancel">Cancel</string>
    <string name="order_again">Order Again</string>
    <string name="details">Details</string>
    <string name="about_restaurant">About Restaurant</string>
    <string name="orders">Orders</string>
    <string name="about_developers">About Developers</string>
    <string name="restaurant_video">Restaurant Video</string>
    <string name="restaurant_location">Restaurant Location</string>
    <string name="sign_out">Sign Out</string>
    <string name="home">Home</string>
    <string name="favourite">Favourite</string>
    <string name="loginfragment">LoginFragment</string>
    <string name="fragment_sign_up">fragment_sign_up</string>
    <string name="aboutrestaurantfragment">AboutRestaurantFragment</string>
    <string name="aboutdeveloperfragment">AboutDeveloperFragment</string>
    <string name="fragment_location">fragment_location</string>
    <string name="fragment_youtube">fragment_youtube</string>
    <string name="cart">Cart</string>
    <string name="orders_history">Orders History</string>
    <string name="create_order">Create Order</string>
    <string name="string">string</string>
</resources>
