<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/navigation"
    app:startDestination="@id/homeFragment">
    <fragment
        android:id="@+id/aboutRestaurantFragment"
        android:name="com.example.hrrestaurant.ui.fragment.drawer.AboutRestaurantFragment"
        android:label="@string/aboutrestaurantfragment" />
    <fragment
        android:id="@+id/aboutDeveloperFragment"
        android:name="com.example.hrrestaurant.ui.fragment.drawer.AboutDeveloperFragment"
        android:label="@string/aboutdeveloperfragment" />
    <fragment
        android:id="@+id/locationFragment"
        android:name="com.example.hrrestaurant.ui.fragment.drawer.LocationFragment"
        android:label="@string/fragment_location"
        tools:layout="@layout/fragment_location" />
    <fragment
        android:id="@+id/youtubeFragment"
        android:name="com.example.hrrestaurant.ui.fragment.drawer.YoutubeFragment"
        android:label="@string/fragment_youtube"
        tools:layout="@layout/fragment_youtube" />
    <fragment
        android:id="@+id/lunchFragment"
        android:name="com.example.hrrestaurant.ui.fragment.lunch.LunchFragment"
        android:label="@string/lunch"
        tools:layout="@layout/fragment_lunch"/>
    <fragment
        android:id="@+id/breakfastFragment"
        android:name="com.example.hrrestaurant.ui.fragment.breakfast.BreakfastFragment"
        android:label="@string/breakfast"
        tools:layout="@layout/fragment_breakfast">
        <action
            android:id="@+id/action_breakfastFragment_to_favouriteFragment"
            app:destination="@id/favouriteFragment" />
    </fragment>
    <fragment
        android:id="@+id/drinksFragment"
        android:name="com.example.hrrestaurant.ui.fragment.drinks.DrinksFragment"
        android:label="@string/drinks"
        tools:layout="@layout/fragment_drinks"/>
    <fragment
        android:id="@+id/sweetsFragment"
        android:name="com.example.hrrestaurant.ui.fragment.sweets.SweetsFragment"
        android:label="@string/dessert"
        tools:layout="@layout/fragment_sweets"/>

    <fragment
        android:id="@+id/searchFragment"
        android:name="com.example.hrrestaurant.ui.fragment.search.SearchFragment"
        android:label="@string/search" />
    <fragment
        android:id="@+id/homeFragment"
        android:name="com.example.hrrestaurant.ui.fragment.home.HomeFragment"
        android:label="@string/home"
        tools:layout="@layout/fragment_home">
        <action
            android:id="@+id/action_homeFragment_to_lunchFragment"
            app:destination="@id/lunchFragment" />
        <action
            android:id="@+id/action_homeFragment_to_breakfastFragment"
            app:destination="@id/breakfastFragment" />
        <action
            android:id="@+id/action_homeFragment_to_drinksFragment"
            app:destination="@id/drinksFragment" />
        <action
            android:id="@+id/action_homeFragment_to_sweetsFragment"
            app:destination="@id/sweetsFragment" />
        <action
            android:id="@+id/action_homeFragment_to_sweetsFragment2"
            app:destination="@id/sweetsFragment" />
    </fragment>
    <fragment
        android:id="@+id/favouriteFragment"
        android:name="com.example.hrrestaurant.ui.fragment.favourite.FavouriteFragment"
        android:label="Favourite" >
        <argument
            android:name="@string/title"
            app:argType="string"
            app:nullable="true" />
        <argument android:name="@string/description"
            app:argType="string"
            app:nullable="true" />
        <argument
            android:name="@string/price"
            app:argType="float" />
    </fragment>
    <fragment
        android:id="@+id/cartFragment"
        android:name="com.example.hrrestaurant.ui.fragment.cart.CartFragment"
        android:label="@string/cart"
        tools:layout="@layout/fragment_cart" >
        <action
            android:id="@+id/action_cartFragment_to_orderFragment"
            app:destination="@id/orderFragment" />
    </fragment>
    <fragment
        android:id="@+id/ordersHistoryFragment"
        android:name="com.example.hrrestaurant.ui.fragment.ordersHistory.OrdersHistoryFragment"
        android:label="@string/orders_history"
        tools:layout="@layout/fragment_orders_history">
        <action
            android:id="@+id/action_ordersHistoryFragment_to_moreDetailsFragment"
            app:destination="@id/moreDetailsFragment" />
    </fragment>
    <fragment
        android:id="@+id/orderFragment"
        android:name="com.example.hrrestaurant.ui.fragment.order.OrderFragment"
        android:label="@string/create_order"
        tools:layout="@layout/fragment_order">
        <action
            android:id="@+id/action_orderFragment_to_ordersHistoryFragment"
            app:destination="@id/ordersHistoryFragment"
            app:popUpToInclusive="true" />
    </fragment>
    <fragment
        android:id="@+id/moreDetailsFragment"
        android:name="com.example.hrrestaurant.ui.fragment.moreDetails.MoreDetailsFragment"
        android:label="fragment_more_details"
        tools:layout="@layout/fragment_more_details" >
        <argument
            android:name="orderId"
            app:argType="string" />
    </fragment>

</navigation>