<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group
        android:id="@+id/primary"
        android:checkableBehavior="single">
        <item
            android:id="@+id/aboutRestaurantFragment"
            android:checkable="true"
            android:icon="@drawable/about"
            android:title="@string/about_restaurant" />
        <item
            android:id="@+id/ordersHistoryFragment"
            android:checkable="true"
            android:icon="@drawable/about"
            android:title="@string/orders" />
        <item
            android:id="@+id/aboutDeveloperFragment"
            android:checkable="true"
            android:icon="@drawable/about"
            android:title="@string/about_developers" />
        <item
            android:id="@+id/youtubeFragment"
            android:checkable="true"
            android:icon="@drawable/video"
            android:title="@string/restaurant_video" />
        <item
            android:id="@+id/locationFragment"
            android:checkable="true"
            android:icon="@drawable/ic_baseline_location_on_24"
            android:title="@string/restaurant_location" />
        <item
            android:id="@+id/logOut"
            android:visible="true"
            android:checkable="true"
            android:icon="@drawable/logout"
            android:title="@string/sign_out" />
    </group>
</menu>