<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="@dimen/_8sdp"
    app:cardElevation="@dimen/_32sdp"
    app:cardCornerRadius="@dimen/_16sdp"
    android:layout_margin="@dimen/_4sdp"
    app:cardBackgroundColor="#85C8C2"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <TextView
            android:id="@+id/orderTitle"
            android:layout_marginTop="@dimen/_8sdp"
            android:padding="@dimen/_8sdp"
            android:layout_margin="@dimen/_8sdp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/abeezee"
            android:text="@string/_2_pizza_3_soups_1_salade_4_ice_cream"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:maxLines="5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@id/orderTotalPrice"/>
        <TextView
            android:id="@+id/orderTotalPrice"
            android:padding="@dimen/_8sdp"
            android:layout_width="wrap_content"
            android:textColor="@color/darkRed"
            android:layout_height="wrap_content"
            android:fontFamily="@font/aclonica"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:text="@string/total_price"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/orderTitle"
            app:layout_constraintBottom_toTopOf="@id/orderEstimatedTime_tv"/>
        <TextView
            android:id="@+id/orderTotalPriceValue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:text="@string/_170_p"
            android:fontFamily="@font/aclonica"
            app:layout_constraintStart_toEndOf="@id/orderTotalPrice"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/orderTitle"
            app:layout_constraintBottom_toTopOf="@id/orderTotalTimeValue"
            />
        <TextView
            android:id="@+id/orderEstimatedTime_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/_8sdp"
            android:fontFamily="@font/aclonica"
            android:textColor="@color/darkRed"

            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:text="@string/total_estimated_time"
            app:layout_constraintBottom_toTopOf="@id/orderStatus_tv"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/orderTotalPrice"
           />
        <TextView
            android:id="@+id/orderTotalTimeValue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:text="@string/_40_min"
            android:fontFamily="@font/aclonica"
            app:layout_constraintBottom_toTopOf="@id/orderStatusValue"
            app:layout_constraintStart_toEndOf="@id/orderEstimatedTime_tv"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/orderTotalPriceValue"/>
        <TextView
            android:id="@+id/orderStatus_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/_8sdp"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:text="@string/order_status"
            android:fontFamily="@font/aclonica"
            android:textColor="@color/darkRed"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@id/orderStatusValue"
            app:layout_constraintTop_toBottomOf="@id/orderEstimatedTime_tv"
            app:layout_constraintBottom_toTopOf="@id/orderDateAndTime_tv"
           />
        <TextView
            android:id="@+id/orderStatusValue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:text="@string/deliverd_to_restaurant"
            android:textStyle="bold"
            android:fontFamily="@font/aclonica"
            app:layout_constraintStart_toEndOf="@id/orderStatus_tv"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/orderTotalTimeValue"
            app:layout_constraintBottom_toTopOf="@id/orderDateAndTimeValue"/>
        <TextView
            android:id="@+id/orderDateAndTime_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/_8sdp"
            android:textColor="@color/darkRed"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:text="@string/order_date_and_time"
            app:layout_constraintStart_toStartOf="parent"
            android:fontFamily="@font/aclonica"
            app:layout_constraintTop_toBottomOf="@id/orderStatus_tv"
            app:layout_constraintBottom_toTopOf="@id/cancelOrderBtn"
           />

        <TextView
            android:id="@+id/orderDateAndTimeValue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:text="2023 - "
            android:fontFamily="@font/aclonica"

            app:layout_constraintStart_toEndOf="@id/orderDateAndTime_tv"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/orderStatusValue"
            app:layout_constraintBottom_toTopOf="@id/orderMoreDetails_btn"/>
        <Button
            android:id="@+id/cancelOrderBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cancel"
            android:textColor="@color/darkYellow"
            app:layout_constraintTop_toBottomOf="@id/orderDateAndTime_tv"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@id/orderAgainBtn"
            app:layout_constraintBottom_toBottomOf="parent"
            />
        <Button
            android:id="@+id/orderAgainBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/order_again"
            app:layout_constraintTop_toBottomOf="@id/orderDateAndTime_tv"
            app:layout_constraintStart_toEndOf="@id/cancelOrderBtn"
            app:layout_constraintEnd_toStartOf="@id/orderMoreDetails_btn"
            app:layout_constraintBottom_toBottomOf="parent"
            android:textColor="@color/darkYellow"
            />
        <Button
            android:id="@+id/orderMoreDetails_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/details"
            android:textColor="@color/darkYellow"
            app:layout_constraintTop_toBottomOf="@id/orderDateAndTime_tv"
            app:layout_constraintStart_toEndOf="@id/orderAgainBtn"
            app:layout_constraintEnd_toStartOf="@id/addOrderItemsToCart"
            app:layout_constraintBottom_toBottomOf="parent"/>
        <CheckBox
            android:id="@+id/addOrderItemsToCart"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:button="@drawable/selector_shopping_cart"
            app:useMaterialThemeColors= "false"
            app:layout_constraintStart_toEndOf="@id/orderMoreDetails_btn"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@id/orderDateAndTime_tv"
            />
    </androidx.constraintlayout.widget.ConstraintLayout>

</com.google.android.material.card.MaterialCardView>