<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    tools:context=".ui.activity.loginActivity.LoginActivity"
    >

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:src="@drawable/slice"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginBottom="@dimen/_280sdp" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/email"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="@dimen/_245sdp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_220sdp"
        android:hint="@string/email"
        app:boxBackgroundColor="@color/cartbackground"
        app:boxCornerRadiusBottomStart="@dimen/_20sdp"
        app:boxCornerRadiusTopEnd="@dimen/_20sdp"
        app:endIconMode="clear_text"
        app:errorEnabled="true"
        android:textColorHint="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@id/password"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/email_et"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/email"
            android:drawablePadding="@dimen/_8sdp"
            android:fontFamily="@font/abeezee"
            android:paddingStart="@dimen/_10sdp"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:textColorHint="@color/black"
            android:textSize="@dimen/_15sdp" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/password"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="@dimen/_245sdp"
        android:layout_height="wrap_content"
        android:hint="@string/password"
        app:boxBackgroundColor="#DDA2B6"
        app:boxCornerRadiusBottomStart="@dimen/_20sdp"
        app:boxCornerRadiusTopEnd="@dimen/_20sdp"
        app:endIconMode="password_toggle"
        app:layout_constraintEnd_toEndOf="parent"
        android:textColorHint="@color/white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/email"
        app:layout_constraintBottom_toTopOf="@id/passwordResetBtn"
        app:startIconDrawable="@drawable/security"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/password_et"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/_10sdp"
            android:textColorHint="@color/white"
            android:textStyle="bold"
            android:drawablePadding="@dimen/_8sdp"
            android:fontFamily="@font/abeezee"
            android:inputType="textPassword"
            android:textSize="@dimen/_15sdp" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/passwordResetBtn"
        style="@style/Widget.MaterialComponents.Button.TextButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/abeezee"
        android:text="@string/send_password_reset_to_email_above"
        android:textColor="@color/white"
        app:layout_constraintBottom_toTopOf="@id/login_btn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/password" />

    <Button
        android:id="@+id/login_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/aclonica"
        android:text="@string/_login"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        app:cornerRadius="@dimen/_10sdp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/passwordResetBtn"
        app:layout_constraintBottom_toTopOf="@id/continueAsGuest_btn"
        />

    <!--        style="?attr/materialButtonOutlinedStyle"-->
    <Button
        android:id="@+id/continueAsGuest_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/aclonica"
        android:text="@string/continue_as_a_guest"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        app:cornerRadius="@dimen/_10sdp"
        app:layout_constraintBottom_toTopOf="@id/google_img"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/login_btn"
        />

    <ImageView
        android:id="@+id/google_img"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_5sdp"
        android:src="@drawable/goggle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/continueAsGuest_btn"
        app:layout_constraintBaseline_toBottomOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="@dimen/_40sdp"/>


</androidx.constraintlayout.widget.ConstraintLayout>